--- a/To-do List/To-do List/TaskDetail.storyboard
+++ b/To-do List/To-do List/TaskDetail.storyboard
@@ -19,36 +19,24 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="tpb-Ts-UQW">
-                                <rect key="frame" x="16" y="36" width="343" height="581"/>
+                                <rect key="frame" x="16" y="80" width="343" height="537"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PRD-6k-hW4">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Task Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sSc-5d-8EA">
                                         <rect key="frame" x="0.0" y="0.0" width="343" height="30"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Task Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sSc-5d-8EA">
-                                                <rect key="frame" x="0.0" y="0.0" width="293" height="30"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="30" id="tAP-0o-cZG"/>
-                                                </constraints>
-                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9lk-d4-IK2">
-                                                <rect key="frame" x="293" y="0.0" width="50" height="30"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="50" id="mlI-wC-bwQ"/>
-                                                </constraints>
-                                                <state key="normal" title="Edit"/>
-                                            </button>
-                                        </subviews>
-                                    </stackView>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="tAP-0o-cZG"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zKM-aT-gBw" customClass="TextField" customModule="To_do_List" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="40" width="343" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="i2P-a2-wXv"/>
                                         </constraints>
-                                        <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" red="0.47635771395453941" green="0.4681640410968817" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bav-L5-yhp">
@@ -58,27 +46,15 @@
                                             <constraint firstAttribute="height" constant="20" id="PEv-d4-Msw"/>
                                         </constraints>
                                     </view>
-                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L5p-Lx-7aM">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Task Details" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mQJ-1D-NX1">
                                         <rect key="frame" x="0.0" y="110" width="343" height="30"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Task Details" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mQJ-1D-NX1">
-                                                <rect key="frame" x="0.0" y="0.0" width="293" height="30"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="30" id="AO1-A8-mcn"/>
-                                                </constraints>
-                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7cc-RC-ptR">
-                                                <rect key="frame" x="293" y="0.0" width="50" height="30"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="50" id="Tuk-uZ-3kX"/>
-                                                </constraints>
-                                                <state key="normal" title="Edit"/>
-                                            </button>
-                                        </subviews>
-                                    </stackView>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="AO1-A8-mcn"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="gkI-93-3JC" customClass="TextView" customModule="To_do_List" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="150" width="343" height="150"/>
                                         <constraints>
@@ -104,7 +80,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iVO-JQ-mIb" customClass="PriorityView" customModule="To_do_List" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="380" width="343" height="201"/>
+                                        <rect key="frame" x="0.0" y="380" width="343" height="157"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </view>
                                 </subviews>
@@ -119,13 +95,34 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="TGF-m4-Yz8"/>
                     </view>
+                    <navigationItem key="navigationItem" id="xek-n7-DQj">
+                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="fhQ-yO-Mqg"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="taskNameTextField" destination="zKM-aT-gBw" id="kST-eI-kGL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zPL-Yy-aHy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="36" y="47.226386806596707"/>
+            <point key="canvasLocation" x="375.19999999999999" y="47.226386806596707"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="eyQ-id-H8J">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="fdN-Ww-JwH" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Zg7-i7-pRy">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="WLw-sz-iFt" kind="relationship" relationship="rootViewController" id="cXf-pd-ZAB"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qoQ-ZW-YoY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-370" y="47"/>
         </scene>
     </scenes>
 </document>
